# llm-optimizer

./: 01_basic_usage.py  02_document_analysis.py  03_batch_processing.py  LICENSE  README.md  __init__.py  models.py  pyproject.toml  setup.py  tracker.py
llm_optimizer/: __init__.py  analytics.py  batcher.py  bedrock.py  bedrock_cache.py  budget.py  cache.py  caching.py  cli.py  client.py  cross_provider_cache.py  few_shot.py  history.py  models.py  optimizer.py  output_repair.py  pii.py  prefill.py  pricing.json  router.py  semantic_cache.py  streaming.py  tracker.py
tests/: test_llm_optimizer.py
